fix issues with classloader isolation